# cas-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/cas/: __init__.py  db.py
src/cas/database/: database.json
