[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cas-python"
version = "0.0.5"
description = "Database of CAS Registry Number for Python"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["cas", "registry", "chemical", "abstracts", "service", "database", "formula"]
authors = [
  {name = "Antonio Silva"}
]
maintainers = [
  {name = "Antonio Silva"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pre-commit>=3.8.0,<4.0.0",
  "ruff>=0.6.1,<1.0.0",
  "black>=24.8.0,<25.0.0", 
  "mypy>=1.11.1,<2.0.0"
]
test = []

[project.urls]
"Homepage" = "https://github.com/asergios/cas-python"
"Bug Reports" = "https://github.com/asergios/cas-python/issues"
"Source" = "https://github.com/asergios/cas-python/"

[tool.setuptools]
packages = ["cas"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"cas" = ["database/*.json"]